<resources>
    <string name="app_name">GPS App</string>
    <string name="button_text">Locate Me!</string>
    <string name="latText">Latitude</string>
    <string name="lngText">Longitude</string>
    <string name="change_lang_text_button">Change Language</string>
    <string name="translate_text" />
    <string name="translate_text_hint">Write to Translate!</string>
    <string name="output_text_hint" />
    <string name="change_lang_image_button_content_description">Change Language</string>
</resources>
